@@ -15,14 +15,9 @@ test2_v0       = 1
 version_plugin = PkgVersion::Block
 github_user    = Perl5-Alien
 
-[RemovePrereqs]
-remove = strict
-remove = warnings
-remove = base
-remove = List::Util
-remove = JSON::PP
-remove = Carp
+[Author::Plicease::Core]
 
+[RemovePrereqs]
 remove = Dist::Zilla::Role::FileMunger
 remove = Dist::Zilla::Role::MetaProvider
 remove = Dist::Zilla::Role::PrereqSource
