@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - [AlienBuild] add clean_install property
 
 0.26      2019-02-20 08:59:17 -0500
   - [AlienBase::Wrapper::Bundle] replaces existing bundled Alien::Base::Wrapper
